--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/Main.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-codec-1.7.jar=C:\\Users\\Fernando\\Downloads\\commons-codec-1.7\\commons-codec-1.7.jar
 file.reference.gson-2.3.1.jar=C:\\Users\\Fernando\\Downloads\\gson-2.3.1.jar
 file.reference.gson-2.8.5.jar=C:\\Users\\Fernando\\Documents\\gson-2.8.5.jar
 file.reference.rs2xml.jar=C:\\Users\\Fernando\\Downloads\\rs2xml.jar
@@ -36,7 +37,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.rs2xml.jar}:\
     ${file.reference.gson-2.3.1.jar}:\
-    ${file.reference.gson-2.8.5.jar}
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.commons-codec-1.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
