Modificado Tela Ordem Sevicos adicionado INSERINDO API HEROKU

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/Main.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-codec-1.11.jar=/home/fernando/Downloads/Bibliotecas/commons-codec-1.11.jar
 file.reference.commons-codec-1.7.jar=C:\\Users\\Fernando\\Downloads\\commons-codec-1.7\\commons-codec-1.7.jar
 file.reference.gson-2.3.1.jar=C:\\Users\\Fernando\\Downloads\\gson-2.3.1.jar
+file.reference.gson-2.3.1.jar-1=/home/fernando/Downloads/Bibliotecas/gson-2.3.1.jar
 file.reference.gson-2.8.5.jar=C:\\Users\\Fernando\\Documents\\gson-2.8.5.jar
 file.reference.rs2xml.jar=C:\\Users\\Fernando\\Downloads\\rs2xml.jar
+file.reference.rs2xml.jar-1=/home/fernando/Downloads/Bibliotecas/rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -38,7 +41,10 @@ javac.classpath=\
     ${file.reference.rs2xml.jar}:\
     ${file.reference.gson-2.3.1.jar}:\
     ${file.reference.gson-2.8.5.jar}:\
-    ${file.reference.commons-codec-1.7.jar}
+    ${file.reference.commons-codec-1.7.jar}:\
+    ${file.reference.gson-2.3.1.jar-1}:\
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.rs2xml.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
